# osynic_downloader

./: .gitignore  Cargo.toml  README.md  README_EN.md  Readme.md  Readme_EN.md  TODO.md
.github/workflows/: release.yml
examples/: cli_boardcast_mpsc.rs  tui_id.rs  tui_url.rs
json/: s2s.js  sets.json  songs.json
src/: error.rs  lib.rs  main.rs  resolver.rs  sources.rs  url.rs
