[package]
name = "osynic_downloader"
version = "0.1.1"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "A osu beatmapsets downloader lib & TUI application based on vielpork"
keywords = ["osynic", "downloader", "tui", "vielpork", "multi-threaded"]
categories = ["games","command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/osynic_downloader"
repository = "https://github.com/osynicite/osynic_downloader"

[[bin]]
name = "osynic-dl"
path = "src/main.rs"

[lib]
name = "osynic_downloader"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

md5 = "0.7.0"
vielpork = "0.1.1"
async-trait = "0.1.87"
clap = {version="4.5.32", features = ["derive"],optional = true}

[dev-dependencies]
dotenvy = "0.15.7"


[features]
default = ["full"]
full = ["tui","cli"]
tui = ["clap"]
cli = []